[package]
name = "robocon-stm32-f446re-template"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
panic-probe = { version = "0.3.1", features = ["defmt", "print-defmt"] }
cortex-m-rtic = "1.1"
defmt = "0.3.10"
defmt-rtt = "0.4.1"
bxcan = { version = "0.7.0", features = ["unstable-defmt"] }
nb = "1.1.0"
systick-monotonic = "1.0.1"

[dependencies.stm32f4xx-hal]
version = "0.22.1"
features = ["stm32f446", "rtic1", "defmt", "can"]



# Set the default for dependencies.
[profile.dev.package."*"]
opt-level = "s"

[profile.release]
codegen-units = 1
incremental = false
debug = true
lto = true
opt-level = "s"
